src/components/Verse.scss
.verse {
  display: grid;
  grid-template-columns: 1fr 2fr;
  grid-template-rows: 1fr;
  grid-column-gap: 10px;
  margin: 5px 10px;

  &-search {
    display: grid;
    grid-template-columns: 2fr 1fr 1fr;
    grid-template-rows: 1fr 0.5fr 22fr;
    grid-column-gap: 10px;
    grid-row-gap: 5px;

    h3 {
      grid-column: 1 / span 3;
    }

    p {
      overflow: auto;
      position: absolute;
      height: 100%;
    }
  }
}

section {
  border: 2px solid var(--color-primary);
  border-radius: 0.5rem;
  padding: 10px;
}

